update: simplified unit tests for all service classes