@@ -2,16 +2,10 @@ package ua.lviv.bas.cinema.service.booking.refund;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -23,37 +17,30 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import ua.lviv.bas.cinema.config.RefundRules;
-import ua.lviv.bas.cinema.domain.BonusCard;
-import ua.lviv.bas.cinema.domain.BonusTransaction;
-import ua.lviv.bas.cinema.domain.SeatReservation;
+import ua.lviv.bas.cinema.config.properties.RefundRules;
 import ua.lviv.bas.cinema.domain.Booking;
 import ua.lviv.bas.cinema.domain.CinemaHall;
 import ua.lviv.bas.cinema.domain.Movie;
 import ua.lviv.bas.cinema.domain.Payment;
 import ua.lviv.bas.cinema.domain.Refund;
 import ua.lviv.bas.cinema.domain.Seat;
+import ua.lviv.bas.cinema.domain.SeatReservation;
 import ua.lviv.bas.cinema.domain.Session;
 import ua.lviv.bas.cinema.domain.Ticket;
 import ua.lviv.bas.cinema.domain.TicketType;
 import ua.lviv.bas.cinema.domain.User;
-import ua.lviv.bas.cinema.domain.enums.BonusTransactionType;
+import ua.lviv.bas.cinema.domain.enums.PaymentStatus;
 import ua.lviv.bas.cinema.domain.enums.RefundStatus;
 import ua.lviv.bas.cinema.domain.enums.TicketStatus;
 import ua.lviv.bas.cinema.dto.refund.request.RefundPreviewRequest;
-import ua.lviv.bas.cinema.dto.refund.request.RefundRequest;
 import ua.lviv.bas.cinema.dto.refund.response.RefundPreviewResponse;
 import ua.lviv.bas.cinema.dto.refund.response.RefundResponse;
-import ua.lviv.bas.cinema.exception.domain.refund.RefundProcessingException;
-import ua.lviv.bas.cinema.exception.domain.refund.TicketNotRefundableException;
 import ua.lviv.bas.cinema.exception.domain.ticket.TicketNotFoundException;
 import ua.lviv.bas.cinema.mapper.RefundItemMapper;
 import ua.lviv.bas.cinema.mapper.RefundMapper;
 import ua.lviv.bas.cinema.repository.RefundRepository;
 import ua.lviv.bas.cinema.repository.TicketRepository;
-import ua.lviv.bas.cinema.service.booking.payment.PaymentProcessingService;
 import ua.lviv.bas.cinema.service.shared.NumberGeneratorService;
-import ua.lviv.bas.cinema.service.user.BonusService;
 
 @ExtendWith(MockitoExtension.class)
 public class RefundServiceTest {
@@ -63,12 +50,6 @@ public class RefundServiceTest {
 
 	@Mock
 	private RefundRepository refundRepository;
-
-	@Mock
-	private PaymentProcessingService paymentProcessingService;
-
-	@Mock
-	private BonusService bonusService;
 
 	@Mock
 	private RefundRules refundRules;
@@ -96,8 +77,6 @@ public class RefundServiceTest {
 	private Payment testPayment;
 	private Session testSession;
 	private RefundPreviewRequest previewRequest;
-	private RefundRequest refundRequest;
-	private Refund testRefund;
 
 	private static final Long USER_ID = 1L;
 	private static final Long TICKET_ID = 2L;
@@ -124,15 +103,17 @@ public class RefundServiceTest {
 		seat.setRow(5);
 		seat.setNumber(10);
 
-		SeatReservation bookedSeat = new SeatReservation();
-		bookedSeat.setSeat(seat);
+		SeatReservation seatReservation = new SeatReservation();
+		seatReservation.setSeat(seat);
 
 		Booking booking = new Booking();
 		booking.setSession(testSession);
-		booking.setBookedSeats(Arrays.asList(bookedSeat));
+		booking.setSeatReservations(List.of(seatReservation));
 
 		testPayment = new Payment();
 		testPayment.setId(1L);
+		testPayment.setLiqpayPaymentId("PAY123");
+		testPayment.setStatus(PaymentStatus.SUCCESS);
 
 		TicketType ticketType = new TicketType();
 		ticketType.setDisplayName("Standard");
@@ -150,17 +131,6 @@ public class RefundServiceTest {
 
 		previewRequest = new RefundPreviewRequest();
 		previewRequest.setTicketId(TICKET_ID);
-
-		refundRequest = new RefundRequest();
-		refundRequest.setTicketId(TICKET_ID);
-		refundRequest.setReason("Change of plans");
-
-		testRefund = new Refund();
-		testRefund.setId(1L);
-		testRefund.setUser(testUser);
-		testRefund.setPayment(testPayment);
-		testRefund.setTotalAmount(new BigDecimal("70.00"));
-		testRefund.setStatus(RefundStatus.PROCESSED);
 	}
 
 	@Test
@@ -169,18 +139,12 @@ public class RefundServiceTest {
 				.thenReturn(Optional.of(testTicket));
 		when(validationService.validateRefund(testTicket)).thenReturn(null);
 
-		RefundPreviewResponse previewResponse = new RefundPreviewResponse();
-		previewResponse.setTicketId(TICKET_ID);
-		previewResponse.setIsRefundable(true);
-		when(calculationService.createPreviewResponse(testTicket, refundRules)).thenReturn(previewResponse);
-
 		RefundPreviewResponse response = refundService.getRefundPreview(previewRequest, USER_ID);
 
 		assertThat(response).isNotNull();
 		assertThat(response.getTicketId()).isEqualTo(TICKET_ID);
-		assertThat(response.getIsRefundable()).isTrue();
-		verify(ticketRepository).findByIdAndUserIdAndStatus(TICKET_ID, USER_ID, TicketStatus.ACTIVE);
-		verify(validationService).validateRefund(testTicket);
+		assertThat(response.getIsRefundable()).isFalse();
+		assertThat(response.getNonRefundableReason()).contains("Contact support");
 	}
 
 	@Test
@@ -206,80 +170,14 @@ public class RefundServiceTest {
 	}
 
 	@Test
-	void processRefund_Success() {
-		when(ticketRepository.findByIdAndUserIdAndStatus(TICKET_ID, USER_ID, TicketStatus.ACTIVE))
-				.thenReturn(Optional.of(testTicket));
-		when(validationService.validateRefund(testTicket)).thenReturn(null);
-		when(refundRules.getRefundPercentage(testSession.getStartTime())).thenReturn(new BigDecimal("70.00"));
-		when(calculationService.calculateRefundAmount(TICKET_PRICE, new BigDecimal("70.00")))
-				.thenReturn(new BigDecimal("70.00"));
-		when(calculationService.calculateBonusRefund(50, new BigDecimal("70.00"))).thenReturn(35);
-		when(refundRepository.save(any(Refund.class))).thenReturn(testRefund);
-
-		BonusCard bonusCard = new BonusCard();
-		when(bonusService.findOrCreateBonusCard(testUser)).thenReturn(bonusCard);
-		when(bonusService.createBonusTransaction(any(BonusCard.class), any(Integer.class),
-				any(BonusTransactionType.class), anyString(), any(), any(), any(Refund.class)))
-				.thenReturn(new BonusTransaction());
-
-		RefundResponse refundResponse = new RefundResponse();
-		refundResponse.setId(1L);
-		when(refundMapper.toRefundResponse(testRefund)).thenReturn(refundResponse);
-		when(numberGenerator.generateRefundNumber(testRefund)).thenReturn("RF-2024-00001");
-
-		RefundResponse response = refundService.processRefund(refundRequest, USER_ID);
-
-		assertThat(response).isNotNull();
-		verify(paymentProcessingService).refundPayment(testPayment, new BigDecimal("70.00"),
-				"Refund for ticket #TKT-123456");
-		verify(bonusService).createBonusTransaction(any(BonusCard.class), eq(35),
-				eq(BonusTransactionType.REFUND_RETURN), anyString(), any(), any(), any(Refund.class));
-		verify(ticketRepository).save(testTicket);
-		assertThat(testTicket.getStatus()).isEqualTo(TicketStatus.REFUNDED);
-	}
-
-	@Test
-	void processRefund_WhenTicketNotFound_ShouldThrowException() {
-		when(ticketRepository.findByIdAndUserIdAndStatus(TICKET_ID, USER_ID, TicketStatus.ACTIVE))
-				.thenReturn(Optional.empty());
-
-		assertThatThrownBy(() -> refundService.processRefund(refundRequest, USER_ID))
-				.isInstanceOf(TicketNotFoundException.class);
-	}
-
-	@Test
-	void processRefund_WhenTicketNotRefundable_ShouldThrowException() {
-		when(ticketRepository.findByIdAndUserIdAndStatus(TICKET_ID, USER_ID, TicketStatus.ACTIVE))
-				.thenReturn(Optional.of(testTicket));
-		when(validationService.validateRefund(testTicket)).thenReturn("Refund is not available for this session");
-
-		assertThatThrownBy(() -> refundService.processRefund(refundRequest, USER_ID))
-				.isInstanceOf(TicketNotRefundableException.class);
-	}
-
-	@Test
-	void processRefund_WhenPaymentRefundFails_ShouldRollback() {
-		when(ticketRepository.findByIdAndUserIdAndStatus(TICKET_ID, USER_ID, TicketStatus.ACTIVE))
-				.thenReturn(Optional.of(testTicket));
-		when(validationService.validateRefund(testTicket)).thenReturn(null);
-		when(refundRules.getRefundPercentage(testSession.getStartTime())).thenReturn(new BigDecimal("70.00"));
-		when(calculationService.calculateRefundAmount(TICKET_PRICE, new BigDecimal("70.00")))
-				.thenReturn(new BigDecimal("70.00"));
-		when(refundRepository.save(any(Refund.class))).thenReturn(testRefund);
-
-		doThrow(new RuntimeException("Payment service error")).when(paymentProcessingService).refundPayment(testPayment,
-				new BigDecimal("70.00"), "Refund for ticket #TKT-123456");
-
-		assertThatThrownBy(() -> refundService.processRefund(refundRequest, USER_ID))
-				.isInstanceOf(RefundProcessingException.class);
-
-		verify(refundRepository).save(testRefund);
-		assertThat(testRefund.getStatus()).isEqualTo(RefundStatus.REJECTED);
-	}
-
-	@Test
 	void getUserRefunds_Success() {
-		List<Refund> refunds = Arrays.asList(testRefund);
+		Refund testRefund = new Refund();
+		testRefund.setId(1L);
+		testRefund.setUser(testUser);
+		testRefund.setTotalAmount(new BigDecimal("70.00"));
+		testRefund.setStatus(RefundStatus.PROCESSED);
+
+		List<Refund> refunds = List.of(testRefund);
 		when(refundRepository.findByUserIdOrderByCreatedAtDesc(USER_ID)).thenReturn(refunds);
 
 		RefundResponse refundResponse = new RefundResponse();
@@ -289,7 +187,6 @@ public class RefundServiceTest {
 		List<RefundResponse> responses = refundService.getUserRefunds(USER_ID);
 
 		assertThat(responses).hasSize(1);
-		verify(refundRepository).findByUserIdOrderByCreatedAtDesc(USER_ID);
 	}
 
 	@Test
@@ -299,6 +196,5 @@ public class RefundServiceTest {
 		List<RefundResponse> responses = refundService.getUserRefunds(USER_ID);
 
 		assertThat(responses).isEmpty();
-		verify(refundRepository).findByUserIdOrderByCreatedAtDesc(USER_ID);
 	}
 }
