@@ -3,12 +3,13 @@ package ua.lviv.bas.cinema.service.booking.types;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,7 +20,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import ua.lviv.bas.cinema.domain.TicketType;
-import ua.lviv.bas.cinema.domain.enums.TicketStatus;
 import ua.lviv.bas.cinema.domain.enums.TicketTypeCategory;
 import ua.lviv.bas.cinema.dto.ticket.request.TicketTypeCreateRequest;
 import ua.lviv.bas.cinema.dto.ticket.request.TicketTypeUpdateRequest;
@@ -33,7 +33,7 @@ import ua.lviv.bas.cinema.repository.TicketRepository;
 import ua.lviv.bas.cinema.repository.TicketTypeRepository;
 
 @ExtendWith(MockitoExtension.class)
-class TicketTypeServiceTest {
+public class TicketTypeServiceTest {
 
 	@Mock
 	private TicketTypeRepository ticketTypeRepository;
@@ -50,395 +50,217 @@ class TicketTypeServiceTest {
 	@InjectMocks
 	private TicketTypeService ticketTypeService;
 
+	private final Long TICKET_TYPE_ID = 1L;
+	private final String TICKET_TYPE_CODE = "ADULT";
+	private final BigDecimal PRICE_MULTIPLIER = new BigDecimal("1.0");
+
 	@Test
 	void createTicketType_Success() {
-		TicketTypeCreateRequest request = TicketTypeCreateRequest.builder().code("ADULT").displayName("Adult")
-				.priceMultiplier(BigDecimal.ONE).minAge(18).maxAge(65).build();
+		TicketTypeCreateRequest request = createTicketTypeRequest();
+		TicketType ticketType = createTicketType();
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
-		TicketTypeResponse response = TicketTypeResponse.builder().id(1L).code("ADULT").build();
-
-		when(ticketTypeRepository.existsByCode("ADULT")).thenReturn(false);
+		when(ticketTypeRepository.existsByCode(TICKET_TYPE_CODE)).thenReturn(false);
 		when(ticketTypeMapper.toTicketType(request)).thenReturn(ticketType);
 		when(ticketTypeRepository.save(ticketType)).thenReturn(ticketType);
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
 		TicketTypeResponse result = ticketTypeService.createTicketType(request);
 
-		assertThat(result.getId()).isEqualTo(1L);
+		assertThat(result).isEqualTo(response);
 		verify(validationService).validateAgeRange(18, 65);
-		verify(ticketTypeRepository).existsByCode("ADULT");
 		verify(ticketTypeRepository).save(ticketType);
 	}
 
 	@Test
-	void createTicketType_WhenCodeExists_ShouldThrowException() {
-		TicketTypeCreateRequest request = TicketTypeCreateRequest.builder().code("ADULT").displayName("Adult")
-				.priceMultiplier(BigDecimal.ONE).build();
+	void createTicketType_DuplicateCode_ThrowsException() {
+		TicketTypeCreateRequest request = createTicketTypeRequest();
 
-		when(ticketTypeRepository.existsByCode("ADULT")).thenReturn(true);
+		when(ticketTypeRepository.existsByCode(TICKET_TYPE_CODE)).thenReturn(true);
 
 		assertThatThrownBy(() -> ticketTypeService.createTicketType(request))
 				.isInstanceOf(TicketTypeDuplicateException.class);
-
-		verify(ticketTypeRepository).existsByCode("ADULT");
-		verify(ticketTypeRepository, never()).save(any());
 	}
 
 	@Test
 	void getTicketTypeById_Success() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
-		TicketTypeResponse response = TicketTypeResponse.builder().id(1L).build();
+		TicketType ticketType = createTicketType();
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
-		TicketTypeResponse result = ticketTypeService.getTicketTypeById(1L);
+		TicketTypeResponse result = ticketTypeService.getTicketTypeById(TICKET_TYPE_ID);
 
-		assertThat(result.getId()).isEqualTo(1L);
-		verify(ticketTypeRepository).findById(1L);
+		assertThat(result).isEqualTo(response);
 	}
 
 	@Test
-	void getTicketTypeById_WhenNotFound_ShouldThrowException() {
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.empty());
+	void getTicketTypeById_NotFound_ThrowsException() {
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.empty());
 
-		assertThatThrownBy(() -> ticketTypeService.getTicketTypeById(1L))
+		assertThatThrownBy(() -> ticketTypeService.getTicketTypeById(TICKET_TYPE_ID))
 				.isInstanceOf(TicketTypeNotFoundException.class);
-
-		verify(ticketTypeRepository).findById(1L);
 	}
 
 	@Test
 	void getTicketTypeByCode_Success() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
-		TicketTypeResponse response = TicketTypeResponse.builder().id(1L).build();
+		TicketType ticketType = createTicketType();
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		when(ticketTypeRepository.findByCode("ADULT")).thenReturn(Optional.of(ticketType));
+		when(ticketTypeRepository.findByCode(TICKET_TYPE_CODE)).thenReturn(Optional.of(ticketType));
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
-		TicketTypeResponse result = ticketTypeService.getTicketTypeByCode("ADULT");
+		TicketTypeResponse result = ticketTypeService.getTicketTypeByCode(TICKET_TYPE_CODE);
 
-		assertThat(result.getId()).isEqualTo(1L);
-		verify(ticketTypeRepository).findByCode("ADULT");
+		assertThat(result).isEqualTo(response);
 	}
 
 	@Test
-	void getTicketTypeByCode_WhenNotFound_ShouldThrowException() {
-		when(ticketTypeRepository.findByCode("ADULT")).thenReturn(Optional.empty());
+	void getTicketTypes_WithFilters_Success() {
+		TicketType ticketType = createTicketType();
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		assertThatThrownBy(() -> ticketTypeService.getTicketTypeByCode("ADULT"))
-				.isInstanceOf(TicketTypeNotFoundException.class);
-
-		verify(ticketTypeRepository).findByCode("ADULT");
-	}
-
-	@Test
-	void getAllTicketTypes_WhenActiveNull() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findAll()).thenReturn(Arrays.asList(ticketType));
+		when(ticketTypeRepository.findByFilters(true, TicketTypeCategory.STANDARD, "search"))
+				.thenReturn(List.of(ticketType));
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
-		List<TicketTypeResponse> result = ticketTypeService.getAllTicketTypes(null);
+		List<TicketTypeResponse> result = ticketTypeService.getTicketTypes(true, TicketTypeCategory.STANDARD, "search");
 
 		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findAll();
-	}
-
-	@Test
-	void getAllTicketTypes_WhenActiveTrue() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findByActiveTrue()).thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getAllTicketTypes(true);
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByActiveTrue();
-	}
-
-	@Test
-	void getAllTicketTypes_WhenActiveFalse() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findByActiveFalse()).thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getAllTicketTypes(false);
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByActiveFalse();
-	}
-
-	@Test
-	void getTicketTypesWithFilters_WhenSearchNotEmpty() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findByFilters(true, TicketTypeCategory.STANDARD, "ADULT"))
-				.thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getTicketTypesWithFilters(true, TicketTypeCategory.STANDARD,
-				"ADULT");
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByFilters(true, TicketTypeCategory.STANDARD, "ADULT");
-	}
-
-	@Test
-	void getTicketTypesWithFilters_WhenSearchEmptyAndAllFiltersNull() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findAll()).thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getTicketTypesWithFilters(null, null, " ");
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findAll();
-	}
-
-	@Test
-	void getTicketTypesWithFilters_WhenOnlyActiveTrue() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findByActiveTrue()).thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getTicketTypesWithFilters(true, null, null);
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByActiveTrue();
-	}
-
-	@Test
-	void getTicketTypesWithFilters_WhenOnlyCategory() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findByCategory(TicketTypeCategory.STANDARD)).thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getTicketTypesWithFilters(null, TicketTypeCategory.STANDARD,
-				null);
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByCategory(TicketTypeCategory.STANDARD);
-	}
-
-	@Test
-	void getTicketTypesWithFilters_WhenActiveAndCategory() {
-		TicketType ticketType = new TicketType();
-		TicketTypeResponse response = TicketTypeResponse.builder().build();
-
-		when(ticketTypeRepository.findByActiveTrueAndCategory(TicketTypeCategory.STANDARD))
-				.thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
-
-		List<TicketTypeResponse> result = ticketTypeService.getTicketTypesWithFilters(true, TicketTypeCategory.STANDARD,
-				null);
-
-		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByActiveTrueAndCategory(TicketTypeCategory.STANDARD);
+		assertThat(result.get(0)).isEqualTo(response);
 	}
 
 	@Test
 	void updateTicketType_Success() {
-		TicketType ticketType = TicketType.builder().id(1L).minAge(18).maxAge(65).displayName("Old").build();
+		TicketType ticketType = createTicketType();
+		TicketTypeUpdateRequest request = TicketTypeUpdateRequest.builder().displayName("Updated Name").minAge(21)
+				.maxAge(70).build();
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		TicketTypeUpdateRequest request = TicketTypeUpdateRequest.builder().displayName("Updated").minAge(21).maxAge(70)
-				.build();
-
-		TicketTypeResponse response = TicketTypeResponse.builder().displayName("Updated").build();
-
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
 		when(ticketTypeRepository.save(ticketType)).thenReturn(ticketType);
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
-		TicketTypeResponse result = ticketTypeService.updateTicketType(1L, request);
+		TicketTypeResponse result = ticketTypeService.updateTicketType(TICKET_TYPE_ID, request);
 
-		assertThat(result.getDisplayName()).isEqualTo("Updated");
-		verify(ticketTypeRepository).findById(1L);
+		assertThat(result).isEqualTo(response);
 		verify(validationService).validateAgeRange(21, 70);
 		verify(ticketTypeMapper).updateTicketTypeFromRequest(ticketType, request);
-		verify(ticketTypeRepository).save(ticketType);
-	}
-
-	@Test
-	void updateTicketType_WhenNotFound_ShouldThrowException() {
-		TicketTypeUpdateRequest request = TicketTypeUpdateRequest.builder().displayName("Updated").build();
-
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.empty());
-
-		assertThatThrownBy(() -> ticketTypeService.updateTicketType(1L, request))
-				.isInstanceOf(TicketTypeNotFoundException.class);
-
-		verify(ticketTypeRepository).findById(1L);
-		verify(ticketTypeRepository, never()).save(any());
 	}
 
 	@Test
 	void deleteTicketType_Success() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
+		TicketType ticketType = createTicketType();
 
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
-		when(ticketRepository.existsByTicketTypeId(1L)).thenReturn(false);
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
+		when(ticketRepository.countByTicketTypeIdAndStatusInAndBookingSessionStartTimeAfter(eq(TICKET_TYPE_ID), any(),
+				any(LocalDateTime.class))).thenReturn(0L);
 
-		ticketTypeService.deleteTicketType(1L);
+		ticketTypeService.deleteTicketType(TICKET_TYPE_ID);
 
-		verify(ticketTypeRepository).findById(1L);
-		verify(ticketRepository).existsByTicketTypeId(1L);
 		verify(ticketTypeRepository).delete(ticketType);
 	}
 
 	@Test
-	void deleteTicketType_WhenNotFound_ShouldThrowException() {
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.empty());
+	void deleteTicketType_WithFutureTickets_ThrowsException() {
+		TicketType ticketType = createTicketType();
 
-		assertThatThrownBy(() -> ticketTypeService.deleteTicketType(1L))
-				.isInstanceOf(TicketTypeNotFoundException.class);
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
+		when(ticketRepository.countByTicketTypeIdAndStatusInAndBookingSessionStartTimeAfter(eq(TICKET_TYPE_ID), any(),
+				any(LocalDateTime.class))).thenReturn(3L);
 
-		verify(ticketTypeRepository).findById(1L);
-		verify(ticketTypeRepository, never()).delete(any());
-	}
-
-	@Test
-	void deleteTicketType_WhenInUse_ShouldThrowException() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
-
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
-		when(ticketRepository.existsByTicketTypeId(1L)).thenReturn(true);
-		when(ticketRepository.countByTicketTypeId(1L)).thenReturn(5L);
-
-		assertThatThrownBy(() -> ticketTypeService.deleteTicketType(1L)).isInstanceOf(TicketTypeInUseException.class);
-
-		verify(ticketTypeRepository).findById(1L);
-		verify(ticketRepository).existsByTicketTypeId(1L);
-		verify(ticketRepository).countByTicketTypeId(1L);
-		verify(ticketTypeRepository, never()).delete(any());
+		assertThatThrownBy(() -> ticketTypeService.deleteTicketType(TICKET_TYPE_ID))
+				.isInstanceOf(TicketTypeInUseException.class);
 	}
 
 	@Test
 	void toggleTicketTypeActiveStatus_ActivateSuccess() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
+		TicketType ticketType = createTicketType();
 		ticketType.setActive(false);
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		TicketTypeResponse response = TicketTypeResponse.builder().active(true).build();
-
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
 		when(ticketTypeRepository.save(ticketType)).thenReturn(ticketType);
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
-		TicketTypeResponse result = ticketTypeService.toggleTicketTypeActiveStatus(1L);
+		TicketTypeResponse result = ticketTypeService.toggleTicketTypeActiveStatus(TICKET_TYPE_ID);
 
-		assertThat(result.isActive()).isTrue();
-		verify(ticketTypeRepository).save(ticketType);
-		verify(ticketRepository, never()).existsByTicketTypeIdAndStatusIn(any(), any());
+		assertThat(result).isEqualTo(response);
+		assertThat(ticketType.isActive()).isTrue();
+		verify(ticketRepository, never()).countByTicketTypeIdAndStatusInAndBookingSessionStartTimeAfter(any(), any(),
+				any());
 	}
 
 	@Test
 	void toggleTicketTypeActiveStatus_DeactivateSuccess() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
+		TicketType ticketType = createTicketType();
 		ticketType.setActive(true);
+		TicketTypeResponse response = createTicketTypeResponse();
 
-		TicketTypeResponse response = TicketTypeResponse.builder().active(false).build();
-
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
-		when(ticketRepository.existsByTicketTypeIdAndStatusIn(1L, List.of(TicketStatus.ACTIVE))).thenReturn(false);
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
+		when(ticketRepository.countByTicketTypeIdAndStatusInAndBookingSessionStartTimeAfter(eq(TICKET_TYPE_ID), any(),
+				any(LocalDateTime.class))).thenReturn(0L);
 		when(ticketTypeRepository.save(ticketType)).thenReturn(ticketType);
 		when(ticketTypeMapper.toTicketTypeResponse(ticketType)).thenReturn(response);
 
-		TicketTypeResponse result = ticketTypeService.toggleTicketTypeActiveStatus(1L);
+		TicketTypeResponse result = ticketTypeService.toggleTicketTypeActiveStatus(TICKET_TYPE_ID);
 
-		assertThat(result.isActive()).isFalse();
-		verify(ticketTypeRepository).save(ticketType);
-		verify(ticketRepository).existsByTicketTypeIdAndStatusIn(1L, List.of(TicketStatus.ACTIVE));
-		verify(ticketRepository, never()).countByTicketTypeIdAndStatusIn(any(), any());
+		assertThat(result).isEqualTo(response);
+		assertThat(ticketType.isActive()).isFalse();
 	}
 
 	@Test
-	void toggleTicketTypeActiveStatus_DeactivateWithActiveTickets_ShouldThrowException() {
-		TicketType ticketType = new TicketType();
-		ticketType.setId(1L);
+	void toggleTicketTypeActiveStatus_DeactivateWithFutureTickets_ThrowsException() {
+		TicketType ticketType = createTicketType();
 		ticketType.setActive(true);
 
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
-		when(ticketRepository.existsByTicketTypeIdAndStatusIn(1L, List.of(TicketStatus.ACTIVE))).thenReturn(true);
-		when(ticketRepository.countByTicketTypeIdAndStatusIn(1L, List.of(TicketStatus.ACTIVE))).thenReturn(3L);
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
+		when(ticketRepository.countByTicketTypeIdAndStatusInAndBookingSessionStartTimeAfter(eq(TICKET_TYPE_ID), any(),
+				any(LocalDateTime.class))).thenReturn(2L);
 
-		assertThatThrownBy(() -> ticketTypeService.toggleTicketTypeActiveStatus(1L))
+		assertThatThrownBy(() -> ticketTypeService.toggleTicketTypeActiveStatus(TICKET_TYPE_ID))
 				.isInstanceOf(TicketTypeInUseException.class);
-
-		verify(ticketTypeRepository, never()).save(any());
 	}
 
 	@Test
 	void getActiveTicketTypesForDropdown_Success() {
-		TicketType ticketType = new TicketType();
-		TicketTypeSimpleResponse response = TicketTypeSimpleResponse.builder().build();
+		TicketType ticketType = createTicketType();
+		TicketTypeSimpleResponse simpleResponse = TicketTypeSimpleResponse.builder().build();
 
-		when(ticketTypeRepository.findByActiveTrue()).thenReturn(Arrays.asList(ticketType));
-		when(ticketTypeMapper.toTicketTypeSimpleResponse(ticketType)).thenReturn(response);
+		when(ticketTypeRepository.findByActiveTrue()).thenReturn(List.of(ticketType));
+		when(ticketTypeMapper.toTicketTypeSimpleResponse(ticketType)).thenReturn(simpleResponse);
 
 		List<TicketTypeSimpleResponse> result = ticketTypeService.getActiveTicketTypesForDropdown();
 
 		assertThat(result).hasSize(1);
-		verify(ticketTypeRepository).findByActiveTrue();
 	}
 
 	@Test
 	void validateAgeForTicketType_Success() {
-		TicketType ticketType = TicketType.builder().minAge(18).maxAge(65).build();
+		TicketType ticketType = createTicketType();
 
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.of(ticketType));
+		when(ticketTypeRepository.findById(TICKET_TYPE_ID)).thenReturn(Optional.of(ticketType));
 		when(validationService.isAgeValidForTicketType(ticketType, 25)).thenReturn(true);
 
-		boolean result = ticketTypeService.validateAgeForTicketType(1L, 25);
+		boolean result = ticketTypeService.validateAgeForTicketType(TICKET_TYPE_ID, 25);
 
 		assertThat(result).isTrue();
-		verify(validationService).isAgeValidForTicketType(ticketType, 25);
 	}
 
-	@Test
-	void validateAgeForTicketType_WhenNotFound_ShouldThrowException() {
-		when(ticketTypeRepository.findById(1L)).thenReturn(Optional.empty());
-
-		assertThatThrownBy(() -> ticketTypeService.validateAgeForTicketType(1L, 25))
-				.isInstanceOf(TicketTypeNotFoundException.class);
+	private TicketTypeCreateRequest createTicketTypeRequest() {
+		return TicketTypeCreateRequest.builder().code(TICKET_TYPE_CODE).displayName("Adult")
+				.priceMultiplier(PRICE_MULTIPLIER).minAge(18).maxAge(65).category(TicketTypeCategory.STANDARD).build();
 	}
 
-	@Test
-	void existsByCode_Success() {
-		when(ticketTypeRepository.existsByCode("ADULT")).thenReturn(true);
-
-		boolean result = ticketTypeService.existsByCode("ADULT");
-
-		assertThat(result).isTrue();
-		verify(ticketTypeRepository).existsByCode("ADULT");
+	private TicketType createTicketType() {
+		return TicketType.builder().id(TICKET_TYPE_ID).code(TICKET_TYPE_CODE).displayName("Adult")
+				.priceMultiplier(PRICE_MULTIPLIER).minAge(18).maxAge(65).category(TicketTypeCategory.STANDARD)
+				.active(true).build();
 	}
 
-	@Test
-	void existsByCode_WhenNotExists() {
-		when(ticketTypeRepository.existsByCode("ADULT")).thenReturn(false);
-
-		boolean result = ticketTypeService.existsByCode("ADULT");
-
-		assertThat(result).isFalse();
-		verify(ticketTypeRepository).existsByCode("ADULT");
+	private TicketTypeResponse createTicketTypeResponse() {
+		return TicketTypeResponse.builder().id(TICKET_TYPE_ID).code(TICKET_TYPE_CODE).displayName("Adult")
+				.priceMultiplier(PRICE_MULTIPLIER).active(true).build();
 	}
 }
