@@ -4,12 +4,9 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -52,251 +49,208 @@ public class CinemaHallServiceTest {
 	@InjectMocks
 	private CinemaHallService cinemaHallService;
 
+	private final Long HALL_ID = 1L;
+	private final String HALL_NAME = "Hall A";
+
 	@Test
 	void createHall_Success() {
-		CinemaHallRequest request = CinemaHallRequest.builder().name("Hall A").build();
-
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Hall A");
-
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("Hall A").build();
-
-		when(hallRepository.existsByName("Hall A")).thenReturn(false);
-		when(hallRepository.save(any(CinemaHall.class))).thenReturn(cinemaHall);
-		when(hallMapper.toCinemaHallResponse(cinemaHall)).thenReturn(response);
-
-		CinemaHallResponse result = cinemaHallService.createHall(request);
-
-		assertThat(result.getName()).isEqualTo("Hall A");
-		verify(hallRepository).existsByName("Hall A");
-	}
-
-	@Test
-	void createHall_WithSeats() {
-		CinemaHallRequest request = CinemaHallRequest.builder().name("Hall B").rows(5).seatsPerRow(10)
+		CinemaHallRequest request = CinemaHallRequest.builder().name(HALL_NAME).rows(5).seatsPerRow(10)
 				.defaultSeatType(SeatType.STANDARD).build();
 
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Hall B");
+		CinemaHall cinemaHall = createCinemaHall();
+		CinemaHallResponse response = createCinemaHallResponse();
 
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("Hall B").capacity(50).build();
-
-		when(hallRepository.existsByName("Hall B")).thenReturn(false);
+		when(hallRepository.existsByName(HALL_NAME)).thenReturn(false);
 		when(hallRepository.save(any(CinemaHall.class))).thenReturn(cinemaHall);
 		when(hallMapper.toCinemaHallResponse(cinemaHall)).thenReturn(response);
 
 		CinemaHallResponse result = cinemaHallService.createHall(request);
 
-		assertThat(result.getName()).isEqualTo("Hall B");
-		assertThat(result.getCapacity()).isEqualTo(50);
+		assertThat(result).isEqualTo(response);
+		verify(hallRepository).save(any(CinemaHall.class));
 	}
 
 	@Test
-	void createHall_WhenNameExists_ShouldThrowException() {
-		CinemaHallRequest request = CinemaHallRequest.builder().name("Hall A").build();
+	void createHall_DuplicateName_ThrowsException() {
+		CinemaHallRequest request = CinemaHallRequest.builder().name(HALL_NAME).build();
 
-		when(hallRepository.existsByName("Hall A")).thenReturn(true);
+		when(hallRepository.existsByName(HALL_NAME)).thenReturn(true);
 
 		assertThatThrownBy(() -> cinemaHallService.createHall(request)).isInstanceOf(DuplicateEntityException.class);
 	}
 
 	@Test
 	void getHallById_Success() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Hall A");
+		CinemaHall cinemaHall = createCinemaHall();
+		CinemaHallResponse response = createCinemaHallResponse();
 
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("Hall A").build();
-
-		when(hallRepository.findById(1L)).thenReturn(Optional.of(cinemaHall));
+		when(hallRepository.findById(HALL_ID)).thenReturn(Optional.of(cinemaHall));
 		when(hallMapper.toCinemaHallResponse(cinemaHall)).thenReturn(response);
 
-		CinemaHallResponse result = cinemaHallService.getHallById(1L);
+		CinemaHallResponse result = cinemaHallService.getHallById(HALL_ID);
 
-		assertThat(result.getName()).isEqualTo("Hall A");
+		assertThat(result).isEqualTo(response);
 	}
 
 	@Test
-	void getHallById_WhenNotFound_ShouldThrowException() {
-		when(hallRepository.findById(1L)).thenReturn(Optional.empty());
+	void getHallById_NotFound_ThrowsException() {
+		when(hallRepository.findById(HALL_ID)).thenReturn(Optional.empty());
 
-		assertThatThrownBy(() -> cinemaHallService.getHallById(1L)).isInstanceOf(CinemaHallNotFoundException.class);
+		assertThatThrownBy(() -> cinemaHallService.getHallById(HALL_ID))
+				.isInstanceOf(CinemaHallNotFoundException.class);
 	}
 
 	@Test
 	void updateHall_Success() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Old Name");
+		CinemaHall existingHall = createCinemaHall();
+		existingHall.setName("Old Name");
 
 		CinemaHallRequest request = CinemaHallRequest.builder().name("New Name").build();
 
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("New Name").build();
+		CinemaHallResponse response = createCinemaHallResponse();
 
-		when(hallRepository.findById(1L)).thenReturn(Optional.of(cinemaHall));
+		when(hallRepository.findById(HALL_ID)).thenReturn(Optional.of(existingHall));
 		when(hallRepository.existsByName("New Name")).thenReturn(false);
-		when(hallRepository.save(cinemaHall)).thenReturn(cinemaHall);
-		when(hallMapper.toCinemaHallResponse(cinemaHall)).thenReturn(response);
+		when(hallRepository.save(existingHall)).thenReturn(existingHall);
+		when(hallMapper.toCinemaHallResponse(existingHall)).thenReturn(response);
 
-		CinemaHallResponse result = cinemaHallService.updateHall(1L, request);
+		CinemaHallResponse result = cinemaHallService.updateHall(HALL_ID, request);
 
-		assertThat(result.getName()).isEqualTo("New Name");
+		assertThat(result).isEqualTo(response);
+		assertThat(existingHall.getName()).isEqualTo("New Name");
 	}
 
 	@Test
-	void updateHall_WithSeats() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Hall A");
+	void updateHall_WithLayout_Success() {
+		CinemaHall existingHall = createCinemaHall();
 
-		CinemaHallRequest request = CinemaHallRequest.builder().name("Hall A").rows(5).seatsPerRow(10)
+		CinemaHallRequest request = CinemaHallRequest.builder().name(HALL_NAME).rows(5).seatsPerRow(10)
 				.defaultSeatType(SeatType.STANDARD).build();
 
-		when(hallRepository.findById(1L)).thenReturn(Optional.of(cinemaHall));
-		when(hallRepository.save(cinemaHall)).thenReturn(cinemaHall);
+		CinemaHallResponse response = createCinemaHallResponse();
 
-		cinemaHallService.updateHall(1L, request);
+		when(hallRepository.findById(HALL_ID)).thenReturn(Optional.of(existingHall));
+		when(hallRepository.save(existingHall)).thenReturn(existingHall);
+		when(hallMapper.toCinemaHallResponse(existingHall)).thenReturn(response);
 
-		verify(seatRepository).deleteByHallId(1L);
+		cinemaHallService.updateHall(HALL_ID, request);
+
+		verify(seatRepository).deleteByHallId(HALL_ID);
 		verify(seatRepository).saveAll(anyList());
 	}
 
 	@Test
-	void updateHall_WhenNameExists_ShouldThrowException() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Old Name");
+	void updateHall_DuplicateName_ThrowsException() {
+		CinemaHall existingHall = createCinemaHall();
+		existingHall.setName("Old Name");
 
 		CinemaHallRequest request = CinemaHallRequest.builder().name("Existing Name").build();
 
-		when(hallRepository.findById(1L)).thenReturn(Optional.of(cinemaHall));
+		when(hallRepository.findById(HALL_ID)).thenReturn(Optional.of(existingHall));
 		when(hallRepository.existsByName("Existing Name")).thenReturn(true);
 
-		assertThatThrownBy(() -> cinemaHallService.updateHall(1L, request))
+		assertThatThrownBy(() -> cinemaHallService.updateHall(HALL_ID, request))
 				.isInstanceOf(DuplicateEntityException.class);
 	}
 
 	@Test
 	void deleteHall_Success() {
-		when(hallRepository.existsById(1L)).thenReturn(true);
-		doNothing().when(hallRepository).deleteById(1L);
+		when(hallRepository.existsById(HALL_ID)).thenReturn(true);
 
-		cinemaHallService.deleteHall(1L);
+		cinemaHallService.deleteHall(HALL_ID);
 
-		verify(hallRepository).deleteById(1L);
+		verify(hallRepository).deleteById(HALL_ID);
 	}
 
 	@Test
-	void deleteHall_WhenNotFound_ShouldThrowException() {
-		when(hallRepository.existsById(1L)).thenReturn(false);
+	void deleteHall_NotFound_ThrowsException() {
+		when(hallRepository.existsById(HALL_ID)).thenReturn(false);
 
-		assertThatThrownBy(() -> cinemaHallService.deleteHall(1L)).isInstanceOf(CinemaHallNotFoundException.class);
+		assertThatThrownBy(() -> cinemaHallService.deleteHall(HALL_ID)).isInstanceOf(CinemaHallNotFoundException.class);
 	}
 
 	@Test
-	void getAllHalls_Success() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
+	void getAllOrSearchHalls_NoSearch_Success() {
+		CinemaHall cinemaHall = createCinemaHall();
+		CinemaHallResponse response = createCinemaHallResponse();
 
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("Hall A").build();
+		when(hallRepository.findAll()).thenReturn(List.of(cinemaHall));
+		when(hallMapper.toCinemaHallResponseList(List.of(cinemaHall))).thenReturn(List.of(response));
 
-		when(hallRepository.findAll()).thenReturn(Collections.singletonList(cinemaHall));
-		when(hallMapper.toCinemaHallResponseList(Collections.singletonList(cinemaHall)))
-				.thenReturn(Collections.singletonList(response));
-
-		List<CinemaHallResponse> result = cinemaHallService.getAllHalls();
+		List<CinemaHallResponse> result = cinemaHallService.getAllOrSearchHalls(null);
 
 		assertThat(result).hasSize(1);
+		assertThat(result.get(0)).isEqualTo(response);
+	}
+
+	@Test
+	void getAllOrSearchHalls_WithSearch_Success() {
+		String searchName = "Hall";
+		CinemaHall cinemaHall = createCinemaHall();
+		CinemaHallResponse response = createCinemaHallResponse();
+
+		when(hallRepository.findByNameContainingIgnoreCase(searchName)).thenReturn(List.of(cinemaHall));
+		when(hallMapper.toCinemaHallResponseList(List.of(cinemaHall))).thenReturn(List.of(response));
+
+		List<CinemaHallResponse> result = cinemaHallService.getAllOrSearchHalls(searchName);
+
+		assertThat(result).hasSize(1);
+		assertThat(result.get(0)).isEqualTo(response);
 	}
 
 	@Test
 	void getHallWithSeats_Success() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Hall A");
+		CinemaHall cinemaHall = createCinemaHall();
+		Seat seat = Seat.builder().id(1L).row(1).number(1).seatType(SeatType.STANDARD).build();
+		cinemaHall.setSeats(List.of(seat));
 
-		List<Seat> seats = Arrays.asList(Seat.builder().id(1L).row(1).number(1).seatType(SeatType.STANDARD).build(),
-				Seat.builder().id(2L).row(1).number(2).seatType(SeatType.STANDARD).build());
-		cinemaHall.setSeats(seats);
+		SeatResponse seatResponse = SeatResponse.builder().id(1L).build();
 
-		List<SeatResponse> seatResponses = Arrays.asList(SeatResponse.builder().id(1L).build(),
-				SeatResponse.builder().id(2L).build());
+		when(hallRepository.findByIdWithSeats(HALL_ID)).thenReturn(Optional.of(cinemaHall));
+		when(seatMapper.toSeatResponseList(List.of(seat))).thenReturn(List.of(seatResponse));
 
-		when(hallRepository.findByIdWithSeats(1L)).thenReturn(Optional.of(cinemaHall));
-		when(seatMapper.toSeatResponseList(seats)).thenReturn(seatResponses);
+		CinemaHallWithSeatsResponse result = cinemaHallService.getHallWithSeats(HALL_ID);
 
-		CinemaHallWithSeatsResponse result = cinemaHallService.getHallWithSeats(1L);
-
-		assertThat(result.getName()).isEqualTo("Hall A");
-		assertThat(result.getCapacity()).isEqualTo(2);
+		assertThat(result.getId()).isEqualTo(HALL_ID);
+		assertThat(result.getName()).isEqualTo(HALL_NAME);
+		assertThat(result.getSeats()).hasSize(1);
 	}
 
 	@Test
 	void getHallLayout_Success() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-		cinemaHall.setName("Hall A");
+		CinemaHall cinemaHall = createCinemaHall();
+		Seat seat1 = Seat.builder().id(1L).row(1).number(1).seatType(SeatType.STANDARD).build();
+		Seat seat2 = Seat.builder().id(2L).row(1).number(2).seatType(SeatType.STANDARD).build();
+		cinemaHall.setSeats(List.of(seat1, seat2));
 
-		List<Seat> seats = Arrays.asList(Seat.builder().id(1L).row(1).number(1).seatType(SeatType.STANDARD).build(),
-				Seat.builder().id(2L).row(1).number(2).seatType(SeatType.STANDARD).build());
-		cinemaHall.setSeats(seats);
+		when(hallRepository.findByIdWithSeats(HALL_ID)).thenReturn(Optional.of(cinemaHall));
 
-		List<SeatResponse> seatResponses = Arrays.asList(SeatResponse.builder().id(1L).build(),
-				SeatResponse.builder().id(2L).build());
+		HallLayoutResponse result = cinemaHallService.getHallLayout(HALL_ID);
 
-		when(hallRepository.findByIdWithSeats(1L)).thenReturn(Optional.of(cinemaHall));
-		when(seatMapper.toSeatResponseList(anyList())).thenReturn(seatResponses);
-
-		HallLayoutResponse result = cinemaHallService.getHallLayout(1L);
-
-		assertThat(result.getHallName()).isEqualTo("Hall A");
+		assertThat(result.getHallId()).isEqualTo(HALL_ID);
+		assertThat(result.getHallName()).isEqualTo(HALL_NAME);
 		assertThat(result.getTotalSeats()).isEqualTo(2);
 	}
 
 	@Test
-	void searchHalls_WithName() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("Hall A").build();
-
-		when(hallRepository.findByNameContainingIgnoreCase("Hall")).thenReturn(Collections.singletonList(cinemaHall));
-		when(hallMapper.toCinemaHallResponseList(Collections.singletonList(cinemaHall)))
-				.thenReturn(Collections.singletonList(response));
-
-		List<CinemaHallResponse> result = cinemaHallService.searchHalls("Hall");
-
-		assertThat(result).hasSize(1);
-	}
-
-	@Test
-	void searchHalls_WithEmptyName() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
-
-		CinemaHallResponse response = CinemaHallResponse.builder().id(1L).name("Hall A").build();
-
-		when(hallRepository.findAll()).thenReturn(Collections.singletonList(cinemaHall));
-		when(hallMapper.toCinemaHallResponseList(Collections.singletonList(cinemaHall)))
-				.thenReturn(Collections.singletonList(response));
-
-		List<CinemaHallResponse> result = cinemaHallService.searchHalls("");
-
-		assertThat(result).hasSize(1);
-		verify(hallRepository).findAll();
-	}
-
-	@Test
 	void getHallEntityById_Success() {
-		CinemaHall cinemaHall = new CinemaHall();
-		cinemaHall.setId(1L);
+		CinemaHall cinemaHall = createCinemaHall();
 
-		when(hallRepository.findById(1L)).thenReturn(Optional.of(cinemaHall));
+		when(hallRepository.findById(HALL_ID)).thenReturn(Optional.of(cinemaHall));
 
-		CinemaHall result = cinemaHallService.getHallEntityById(1L);
+		CinemaHall result = cinemaHallService.getHallEntityById(HALL_ID);
 
 		assertThat(result).isEqualTo(cinemaHall);
+	}
+
+	private CinemaHall createCinemaHall() {
+		CinemaHall hall = new CinemaHall();
+		hall.setId(HALL_ID);
+		hall.setName(HALL_NAME);
+		return hall;
+	}
+
+	private CinemaHallResponse createCinemaHallResponse() {
+		return CinemaHallResponse.builder().id(HALL_ID).name(HALL_NAME).build();
 	}
 }
